removed dup'd images folder, fixed gap between carousel and navbar

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,4 +1,4 @@
 .carousel-inner .item img, .carousel-inner .item.active img {
-	max-height: 900px;	
+	height: auto;	
 }
 
